package com.cine.cinesmart.model;

// en rol solo puede ser o USER o ADMIN, esto mejora seguridad
public enum Rol {
    USER, ADMIN
}
